force-app/main/default/objects/Opportunity_Service_Provider__c/Opportunity_Service_Provider__c.object-meta.xml
<CustomObject>
    <label>Opportunity Service Provider</label>
    <nameField>
        <displayFormat>OSP-{00000}</displayFormat>
        <label>OSP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Service Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>