force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Allowance_Available__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Available__c</fullName>
    <description>Allowance - Drawdowns - Scheduled Payments</description>
    <formula>Allowance_Balance__c - Total_Scheduled_Payments_Factored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>