force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Allowance_Balance__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Balance__c</fullName>
    <formula>Allowance__c - Total_Paid_Non_Rejected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>