force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Conga_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Facility_Name__c</fullName>
    <formula>Service_Provider_Facility__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga: Facility Name</label>
    <type>Text</type>
</CustomField>