force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Docusign_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Parameters__c</fullName>
    <description>Custom parameters sent to docusign via conga to specify additional settings for the envelope email.</description>
    <formula>&quot;&amp;DocuSignR1EmailSubject=&quot;&amp;DS_Primary_Contact_Name__c&amp;&quot;+Treatment+Loan+Schedule+Documents&amp;DocuSignR1EmailBlurb=&quot;&amp;DS_Primary_Contact_Name__c&amp;&quot;,%0A%0AAttached+is+your+Easy+Legal+Finance+Irrevocable+Direction+document.+%0A%0APlease+review+the+attached+document+and+sign+electronically,+where+specified.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign Parameters</label>
    <type>Text</type>
</CustomField>