force-app/main/default/objects/Opportunity_Service_Provider__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Opportunity Service Providers</relationshipLabel>
    <relationshipName>Opportunity_Service_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>