force-app/main/default/objects/Opportunity_Service_Provider__c/fields/DS_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>DS_Primary_Contact_Name__c</fullName>
    <formula>Service_Provider_Facility__r.Primary_Contact__r.FirstName &amp;&quot; &quot;&amp; Service_Provider_Facility__r.Primary_Contact__r.LastName</formula>
    <label>DS Primary Contact Name</label>
    <type>Text</type>
</CustomField>