force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <formula>Service_Provider_Facility__r.BillingStreet &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingCity &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingState &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingState &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingCountry</formula>
    <label>Facility Address</label>
    <type>Text</type>
</CustomField>