force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Generate_Schedule_PDF__c.field-meta.xml
<CustomField>
    <fullName>Generate_Schedule_PDF__c</fullName>
    <formula>IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000NthIU&quot;,&quot;a0x19000000ythu&quot;)&amp;&quot;&amp;DS7=3&amp;DefaultPDF=1&amp;SC0=1&quot;,&quot;Schedule(PDF)&quot;,&quot;_blank&quot;)
, IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan 2&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000ObHzx&quot;,&quot;a0x19000000ythz&quot;)&amp;&quot;&amp;DS7=3&amp;DefaultPDF=1&amp;SC0=1&quot;,&quot;Schedule(PDF)&quot;,&quot;_blank&quot;)
, &quot;N/A&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Schedule (PDF)</label>
    <type>Text</type>
</CustomField>