force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Payment_Factor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Factor__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Type_of_Loan__c, &#39;Treatment Loan 2&#39;), 0.5, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>