force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>IF(
ISBLANK(Service_Provider_Facility__r.Primary_Contact__c)
, HYPERLINK(&quot;/&quot;&amp; Service_Provider_Facility__r.Id &amp; &quot;/e?retURL=/&quot; &amp; Service_Provider_Facility__r.Id, &quot;Click Here to Add&quot;, &quot;_blank&quot;)
, HYPERLINK(&quot;/&quot;&amp; Service_Provider_Facility__r.Primary_Contact__r.Id ,Service_Provider_Facility__r.Primary_Contact__r.FirstName &amp;&quot; &quot;&amp; Service_Provider_Facility__r.Primary_Contact__r.LastName,&quot;_blank&quot;) 
)</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>