force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Id__c</fullName>
    <description>Field used for docusign purposes</description>
    <formula>IF( 
ISBLANK(Service_Provider_Facility__r.Primary_Contact__c) 
, &quot;NA&quot;
, Service_Provider_Facility__r.Primary_Contact__r.Id
)</formula>
    <label>Primary Contact Id</label>
    <type>Text</type>
</CustomField>