force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Schedule_Payor_Name__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Payor_Name__c</fullName>
    <description>Field used for conga purposes</description>
    <formula>IF(
ISBLANK(Opportunity__r.Primary_Contact__r.MiddleName)
, Opportunity__r.Primary_Contact__r.FirstName &amp; &quot;, &quot; &amp; Opportunity__r.Primary_Contact__r.LastName
, Opportunity__r.Primary_Contact__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Primary_Contact__r.MiddleName &amp; &quot;, &quot; &amp; Opportunity__r.Primary_Contact__r.LastName
)</formula>
    <label>Schedule Payor Name</label>
    <type>Text</type>
</CustomField>