force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Send_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Send_Schedule__c</fullName>
    <description>Conga and Docusign instructions</description>
    <formula>IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000NthIU&quot;,&quot;a0x19000000ythu&quot;)&amp;&quot;&amp;DS7=17&amp;DocuSignVisible=1&amp;DocuSignR1Id=&quot;&amp;Primary_Contact_Id__c&amp;&quot;&amp;DocuSignR1Type=Signer&amp;DocuSignR1Role=Signer+1&amp;DocuSignR1RoutingOrder=1&amp;QueryStringField=Docusign_Parameters__c&quot;,&quot;Send Schedule&quot;,&quot;_blank&quot;)
, IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan 2&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000ObHzx&quot;,&quot;a0x19000000ythz&quot;)&amp;&quot;&amp;DS7=17&amp;DocuSignVisible=1&amp;DocuSignR1Id=&quot;&amp;Primary_Contact_Id__c&amp;&quot;&amp;DocuSignR1Type=Signer&amp;DocuSignR1Role=Signer+1&amp;DocuSignR1RoutingOrder=1&amp;QueryStringField=Docusign_Parameters__c&quot;,&quot;Send Schedule&quot;,&quot;_blank&quot;)
, &quot;N/A&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Schedule</label>
    <type>Text</type>
</CustomField>