force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Service_Provider_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Email__c</fullName>
    <formula>IF(
ISBLANK(Service_Provider_Facility__r.Primary_Contact__r.Email)
, &quot;Not available&quot;
, Service_Provider_Facility__r.Primary_Contact__r.Email
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider Email</label>
    <type>Text</type>
</CustomField>