force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Service_Provider_Facility__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>General Business</value>
        </filterItems>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Treatment Provider Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Service Providers</relationshipLabel>
    <relationshipName>Opportunity_Service_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>