force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Service_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Phone__c</fullName>
    <formula>IF(
ISBLANK(Service_Provider_Facility__r.Phone)
, &quot;Not available&quot;
, Service_Provider_Facility__r.Phone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider Phone</label>
    <type>Text</type>
</CustomField>