force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting to Send Schedule</fullName>
                <default>true</default>
                <label>Waiting to Send Schedule</label>
            </value>
            <value>
                <fullName>Schedule Sent</fullName>
            </value>
            <value>
                <fullName>Schedule Signed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>