force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced__c</fullName>
    <description>Sum of invoices from provider</description>
    <label>Total Invoiced</label>
    <summarizedField>Opportunity_Service_Provider_Invoice__c.Amount__c</summarizedField>
    <summaryForeignKey>Opportunity_Service_Provider_Invoice__c.Opportunity_Service_Provider__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>