force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Outstanding_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Invoices__c</fullName>
    <label>Total Outstanding Invoices</label>
    <summarizedField>Opportunity_Service_Provider_Invoice__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity_Service_Provider_Invoice__c.Paid__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Service_Provider_Invoice__c.Opportunity_Service_Provider__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>