force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Outstanding_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Payments__c</fullName>
    <formula>Total_Outstanding_Invoices__c * Payment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>