force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Paid_Factored__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Factored__c</fullName>
    <description>Total Paid considering payment factor to correctly calculate remaining allowance. (i.e. Treatment 2 is doubled)</description>
    <formula>Total_Paid_Non_Rejected__c / Payment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid Factored</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>