force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Paid_Non_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Non_Rejected__c</fullName>
    <formula>Total_Paid__c -  Total_Principal_Rejected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid Non Rejected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>