force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Paid_RU__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_RU__c</fullName>
    <label>Total Paid</label>
    <summarizedField>Service_Provider_Drawdown__c.Amount__c</summarizedField>
    <summaryForeignKey>Service_Provider_Drawdown__c.Opportunity_Service_Provider_MD__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>