force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Principal_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal_Rejected__c</fullName>
    <label>Total Principal Rejected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>