force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested__c</fullName>
    <formula>Total_Invoiced__c * Payment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>