force-app/main/default/objects/Opportunity_Service_Provider__c/fields/Total_Scheduled_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Scheduled_Payments__c</fullName>
    <description>Total of unpaid scheduled payments. (Field to be rolled up with declaritive rollup class)</description>
    <label>Total Scheduled Payments</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>