force-app/main/default/objects/Opportunity_Service_Provider__c/validationRules/OSPVR_01_ServiceProviderFacility.validationRule-meta.xml
<ValidationRule>
    <fullName>OSPVR_01_ServiceProviderFacility</fullName>
    <active>true</active>
    <description>The Service Provider Facility cannot be blank</description>
    <errorConditionFormula>ISBLANK(Service_Provider_Facility__c)</errorConditionFormula>
    <errorDisplayField>Service_Provider_Facility__c</errorDisplayField>
    <errorMessage>Please select a Treatment Firm. Error: OSPVR_01</errorMessage>
</ValidationRule>